2009-09-12  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bug-gnu-emacs-bts-p): Add
	modes `gnus-original-article-mode' and `gnus-article-mode'.
	(tinydebian-bug-url-current-buffer): Detect savannah messages
	better.
	(tinydebian-with-bug-context): New.
	(tinydebian-bug-url): Use `tinydebian-with-bug-context'.
	(tinydebian-bts-generic-email-compose): Use `tinydebian-with-bug-context'.
	(tinydebian-bts-generic-email-compose-1): New.
	(tinydebian-emacs-bts-bug-url-compose): New.
	(tinydebian-:emacs-bts-url-http-bugs): New.
	(tinydebian-bug-url-forward): New.
	(tinydebian-bug-browse-url-main): New.
	(tinydebian-bug-browse-url-run): New.
	(tinydebian-bug-url-current-buffer): Use
	`tinydebian-url-debian-bugs'.
	(tinydebian-url-debian-bugs): Move location.
	(tinydebian-bts-mode): Change key 'b' to run generic
	`tinydebian-bug-browse-url-main' which works almost for any bug.
	(tinydebian-bts-email-compose): Change bts-type test to string.
	(tinydebian-bts-generic-email-compose-1): Set  BTS type to
	string, not symbol.
	(tinydebian-bts-generic-email-compose): Set  BTS type to
	string, not symbol.
	(tinydebian-bug-ask-bts-and-number): New.
	(tinydebian-bts-url-bug-compose): New.
	(tinydebian-launchpad-url-package-bugs): New.
	(tinydebian-bug-url-current-buffer): Simplify. Use
	`tinydebian-launchpad-url-package-bugs'.
	(tinydebian-bug-ask-url-for-bts-and-number): New.
	(tinydebian-bug-bts-type-determine): New.
	(tinydebian-debian-bug-bts-type-p): New.
	(tinydebian-debian-bts-url-compose): New.
	(tinydebian-gnome-bug-type-p): New.
	(tinydebian-bug-gnu-savannah-buffer-url-p): Improve regexp.
	(tinydebian-sourceware-bts-url-compose): New.
	(tinydebian-sourceforge-bug-at-current-point): New.
	(tinydebian-sourceforge-bug-type-p): Improve.
	(tinydebian-mercurial-bug-type-p): New.
	(tinydebian-bug-browse-url-main-interactive): New.

2009-09-11  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bug-url-current-buffer): Renamed.